--- a/front-end/my-app/package.json
+++ b/front-end/my-app/package.json
@@ -15,6 +15,8 @@
     "jwt-decode": "^4.0.0",
     "next": "15.3.2",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
+    "react-currency-input-field": "^3.10.0",
     "react-dom": "^19.0.0",
     "react-select": "^5.10.1"
   },
