--- a/front-end/my-app/package.json
+++ b/front-end/my-app/package.json
@@ -18,7 +18,9 @@
     "react-bootstrap": "^2.10.10",
     "react-currency-input-field": "^3.10.0",
     "react-dom": "^19.0.0",
-    "react-select": "^5.10.1"
+    "react-hook-form": "^7.57.0",
+    "react-select": "^5.10.1",
+    "swiper": "^11.2.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
