--- a/front-end/my-app/package.json
+++ b/front-end/my-app/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-select": "^5.10.1",
+    "sweetpagination": "^1.0.15",
     "swiper": "^11.2.8"
   },
   "devDependencies": {
